--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="post_thumbnail">Post thumbnail</string>
     <string name="create_new_post">New Post</string>
     <string name="action_settings">Settings</string>
+    <string name="button">Button</string>
 </resources>
