--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="create_new_post">New Post</string>
     <string name="action_settings">Settings</string>
     <string name="button">Button</string>
+    <string name="upload_post">Post</string>
+    <string name="take_photo">Take Photo</string>
 </resources>
